# coroutineFSort

./: .gitignore  CMakeLists.txt  README.md  checkTest.sh  coSort.c  coSort.h  generateTest.sh  sort.sh  test.sh
data/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
src/: coSort.c  coSort.h  stack.c  stack.h  stackArrays.h
